force-app/main/default/objects/Developer_Program__c/Developer_Program__c.object-meta.xml
<CustomObject>
    <description>Developer Marketing :</description>
    <label>Dev Program</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dev Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>