force-app/main/default/objects/Developer_Program__c/fields/Activity_Score__c.field-meta.xml
<CustomField>
    <fullName>Activity_Score__c</fullName>
    <label>Activity Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>