force-app/main/default/objects/Developer_Program__c/fields/Dev_Review_Required__c.field-meta.xml
<CustomField>
    <fullName>Dev_Review_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Review Required</label>
    <type>Checkbox</type>
</CustomField>