force-app/main/default/objects/Developer_Program__c/fields/Dev_Review_Solution__c.field-meta.xml
<CustomField>
    <fullName>Dev_Review_Solution__c</fullName>
    <label>Review Solution</label>
    <length>512</length>
    <type>LongTextArea</type>
</CustomField>