force-app/main/default/objects/Developer_Program__c/fields/Developer_Focused__c.field-meta.xml
<CustomField>
    <fullName>Developer_Focused__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Flag to inform if the program is focused only on devlopers</description>
    <label>Developer Focused</label>
    <type>Checkbox</type>
</CustomField>