force-app/main/default/objects/Developer_Program__c/fields/Program_ID__c.field-meta.xml
<CustomField>
    <fullName>Program_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Program ID obtained from the DevZone API to be used for comparison by Mulesoft in order to reference a developer program</description>
    <label>Program ID</label>
    <length>16</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>