force-app/main/default/objects/Developer_Program__c/fields/Program_Owner__c.field-meta.xml
<CustomField>
    <fullName>Program_Owner__c</fullName>
    <label>Program Owner</label>
    <length>50</length>
    <type>Text</type>
</CustomField>