force-app/main/default/objects/Developer_Program__c/fields/Program_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Program_Owner_Email__c</fullName>
    <label>Program Owner Email</label>
    <type>Email</type>
</CustomField>